standards/gnds-2.0/gnds/c/src/v2.0/top/CovarianceSuite.h

// --- Const-aware handles.
typedef const struct CovarianceSuiteClass *const ConstHandle2ConstCovarianceSuite;
typedef       struct CovarianceSuiteClass *const ConstHandle2CovarianceSuite;
// +++ Get, non-const
extern_c Handle2ExternalFiles
CovarianceSuiteExternalFilesGet(ConstHandle2CovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteExternalFilesSet(ConstHandle2CovarianceSuite self, ConstHandle2ConstExternalFiles externalFiles);
// -----------------------------------------------------------------------------
// Child: styles
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteStylesHas(ConstHandle2ConstCovarianceSuite self);
// --- Get, const
extern_c Handle2ConstStyles
CovarianceSuiteStylesGetConst(ConstHandle2ConstCovarianceSuite self);
// +++ Get, non-const
extern_c Handle2Styles
CovarianceSuiteStylesGet(ConstHandle2CovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteStylesSet(ConstHandle2CovarianceSuite self, ConstHandle2ConstStyles styles);
// -----------------------------------------------------------------------------
// Child: covarianceSections
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteCovarianceSectionsHas(ConstHandle2ConstCovarianceSuite self);
// --- Get, const
extern_c Handle2ConstCovarianceSections
CovarianceSuiteCovarianceSectionsGetConst(ConstHandle2ConstCovarianceSuite self);
// +++ Get, non-const
extern_c Handle2CovarianceSections
CovarianceSuiteCovarianceSectionsGet(ConstHandle2CovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteCovarianceSectionsSet(ConstHandle2CovarianceSuite self, ConstHandle2ConstCovarianceSections covarianceSections);
// -----------------------------------------------------------------------------
// Child: parameterCovariances
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteParameterCovariancesHas(ConstHandle2ConstCovarianceSuite self);
// --- Get, const
extern_c Handle2ConstParameterCovariances
CovarianceSuiteParameterCovariancesGetConst(ConstHandle2ConstCovarianceSuite self);
// +++ Get, non-const
extern_c Handle2ParameterCovariances
CovarianceSuiteParameterCovariancesGet(ConstHandle2CovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteParameterCovariancesSet(ConstHandle2CovarianceSuite self, ConstHandle2ConstParameterCovariances parameterCovariances);