versions/GNDS-v2.0/GNDS/fortran/src/v2.0/top/CovarianceSuite.f03


!! Get
function CovarianceSuiteExternalFilesGet(handle) &
      bind(C, name='CovarianceSuiteExternalFilesGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function CovarianceSuiteExternalFilesGet

!! Set
subroutine CovarianceSuiteExternalFilesSet(handle, fieldHandle) &
      bind(C, name='CovarianceSuiteExternalFilesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine CovarianceSuiteExternalFilesSet


!! -----------------------------------------------------------------------------
!! Child: styles
!! -----------------------------------------------------------------------------

!! Has
function CovarianceSuiteStylesHas(handle) &
      bind(C, name='CovarianceSuiteStylesHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function CovarianceSuiteStylesHas

!! Get, const
function CovarianceSuiteStylesGetConst(handle) &
      bind(C, name='CovarianceSuiteStylesGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function CovarianceSuiteStylesGetConst

!! Get
function CovarianceSuiteStylesGet(handle) &
      bind(C, name='CovarianceSuiteStylesGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function CovarianceSuiteStylesGet

!! Set
subroutine CovarianceSuiteStylesSet(handle, fieldHandle) &
      bind(C, name='CovarianceSuiteStylesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine CovarianceSuiteStylesSet


!! -----------------------------------------------------------------------------
!! Child: covarianceSections
!! -----------------------------------------------------------------------------

!! Has
function CovarianceSuiteCovarianceSectionsHas(handle) &
      bind(C, name='CovarianceSuiteCovarianceSectionsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function CovarianceSuiteCovarianceSectionsHas

!! Get, const
function CovarianceSuiteCovarianceSectionsGetConst(handle) &
      bind(C, name='CovarianceSuiteCovarianceSectionsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function CovarianceSuiteCovarianceSectionsGetConst

!! Get
function CovarianceSuiteCovarianceSectionsGet(handle) &
      bind(C, name='CovarianceSuiteCovarianceSectionsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function CovarianceSuiteCovarianceSectionsGet

!! Set
subroutine CovarianceSuiteCovarianceSectionsSet(handle, fieldHandle) &
      bind(C, name='CovarianceSuiteCovarianceSectionsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine CovarianceSuiteCovarianceSectionsSet


!! -----------------------------------------------------------------------------
!! Child: parameterCovariances
!! -----------------------------------------------------------------------------

!! Has
function CovarianceSuiteParameterCovariancesHas(handle) &
      bind(C, name='CovarianceSuiteParameterCovariancesHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function CovarianceSuiteParameterCovariancesHas

!! Get, const
function CovarianceSuiteParameterCovariancesGetConst(handle) &
      bind(C, name='CovarianceSuiteParameterCovariancesGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function CovarianceSuiteParameterCovariancesGetConst

!! Get
function CovarianceSuiteParameterCovariancesGet(handle) &
      bind(C, name='CovarianceSuiteParameterCovariancesGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function CovarianceSuiteParameterCovariancesGet

!! Set
subroutine CovarianceSuiteParameterCovariancesSet(handle, fieldHandle) &
      bind(C, name='CovarianceSuiteParameterCovariancesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine CovarianceSuiteParameterCovariancesSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module topCovarianceSuite
